src/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>flags used to turn on/off all GWBase trigger logic.</description>
    <fields>
        <fullName>Enable_Active_Campaign__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, new Campaigns are marked Active.</inlineHelpText>
        <label>Enable Active Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Auto_Membership_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Auto Membership Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Contact_Relationships__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers will support Contact Relationships.</inlineHelpText>
        <label>Enable Contact Relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Contact_Smart_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, handle DoNotMail, Inactive, Deceased, UncheckBoardMember, UncheckBadEmail &quot;rules&quot; to set related fields appropriately.</inlineHelpText>
        <label>Enable Contact Smart Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Default_Campaign_Member_Statuses__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, on campaign creation, default campaign member status values for the campaign type will be created.  the status values are specified in Campaign Mbr Status Settings.</inlineHelpText>
        <label>Enable Default Campaign Member Statuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Engagement_Tracker__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers support the Engagement Tracker.</inlineHelpText>
        <label>Enable Engagement Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Households__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers will manage Households for Contacts.</inlineHelpText>
        <label>Enable Households</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Individual_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If true, triggers will automatically set the Individual account on new contacts, and will prevent the Individual account from being modified by the user.</inlineHelpText>
        <label>Enable Individual Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_InterAccount_Relationships__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers will provide support for InterAccount Relationships.</inlineHelpText>
        <label>Enable InterAccount Relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Lead_Add_To_Campaign__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, support adding leads to campaigns if campaignId field is set.</inlineHelpText>
        <label>Enable Lead Add To Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Lead_Smart_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, auto set lead company if not provided, and handle address fields to work or home.</inlineHelpText>
        <label>Enable Lead Smart Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Add_To_Campaign__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, trigger adds the primary contact role on the opportunity to the opportunity&apos;s campaign.</inlineHelpText>
        <label>Enable Opportunity Add To Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_AutoName__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, new opportunities without names are given a name based off the Opp Name Format setting.</inlineHelpText>
        <label>Enable Opportunity AutoName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Contact_Roles__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, new opportunities auto create contact roles for provided contact and optionally household members.</inlineHelpText>
        <label>Enable Opportunity Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Mirror_Payments__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers will support Mirror Payments on Opportunities.</inlineHelpText>
        <label>Enable Opportunity Mirror Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Recurring_Creation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, trigger will see if this is the last Recurring opportunity on a RecurringPaymentProfile, and will create more Recurring opportunities if the RPP is still active.</inlineHelpText>
        <label>Enable Opportunity Recurring Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Rollups__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers perform Opportunity Rollup calculations.</inlineHelpText>
        <label>Enable Opportunity Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Primary_Contact_On_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, triggers will maintain the Primary Contact field on Accounts.</inlineHelpText>
        <label>Enable Primary Contact On Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_RPP_Opportunity_Closing__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>if true, trigger will see if the Recurring Payment Profile&apos;s EndDate is being set, and will then find any Recurring opportunities for this RPP, and mark them Closed, Lost if they are after the new EndDate.</inlineHelpText>
        <label>Enable RPP Opportunity Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Zip_Lookup__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If true, new Accounts and Contacts will have City, State, and County set if Zip is provided.</inlineHelpText>
        <label>Enable Zip Lookup</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>